<resources>
    <string name="app_name">ITENG</string>
    <string name="basa">БАЗОВЫЙ УРОВЕНЬ</string>
    <string name="profile">ПРОФИЛЬНЫЙ УРОВЕНЬ</string>
    <string name="zagolovok">ItEng</string>
    <string name="Profile_back">Назад</string>
    <string name="Baza_back">Назад</string>
    <string name="pr_1">Уровень 1</string>
    <string name="pr_2">Уровень 2</string>
    <string name="b_1">Уровень 1</string>
    <string name="b_2">Уровень 2</string>
    <string name="registration">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="login">ВОЙТИ</string>
    <string name="fill">NEXT</string>
    <string name="plaintext">ЭЛЕКТРОННАЯ ПОЧТА</string>
    <string name="plaintext2">ПАРОЛЬ</string>
    <string name="button">NEXT</string>
    <string name="button_fill">NEXT</string>
    <string name="plaintext_login">ЭЛЕКТРОННАЯ ПОЧТА</string>
    <string name="plaintext_password">PASSWORD</string>
    <string name="button_login">ВОЙТИ</string>
    <string name="button_register">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="button_fill_login">NEXT</string>
    <string name="button_login_google" />
    <string name="title_activity_window">Window</string>
    <string name="tab_text_1">БАЗА</string>
    <string name="tab_text_2">ПРОФИЛЬ</string>
    <string name="tab_text_3">СЛОВАРЬ</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="text1" />
    <string name="text2" />
    <string name="Plaintext_0">" "</string>
    <string name="button_translate">ПЕРЕВОД</string>
    <string name="PlainText_TRANSLATE" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Baza_1_next" />
    <string name="Baza_1_previous" />
    <string name="Profile_1_next" />
    <string name="Profile_1_previous" />
    <string name="Button_baza_1" />
    <string name="Button_baza_2">" "</string>
    <string name="Button_baza_3" />
    <string name="Button_baza_4" />
    <string name="Button_baza_6" />
    <string name="Button_profile_1" />
    <string name="Button_profile_2" />
    <string name="Button_profile_3" />
    <string name="Button_profile_4" />
    <string name="Button_profile_5" />
    <string name="Button_profile_6" />
    <string name="button_back_baza1">BACK</string>
    <string name="button_back_profile">BACK</string>
    <string name="button_tab3_next">NEW</string>
    <string name="button_fragmentword_next">NEXT</string>
    <string name="button_fragmentword2">FINISH</string>
    <string name="text_word">1 </string>
    <string name="translate_word" />
    <string name="button_word">next</string>
    <string name="world_translation" />
    <string name="word_text" />
    <string name="button_test_baza_1">TEST</string>
    <string name="Button_menu_baza_1_t" />
    <string name="Button_menu_baza_1_pr" />
    <string name="textview_progressbar_baza" />
    <string name="Button_test_baza_1_a" />
    <string name="plaintext_test_baza_2" />
    <string name="textview2">Пишите с маленькой буквы</string>
    <string name="button_result0">ПРОДОЛЖИТЬ</string>
    <string name="textview3" />
    <string name="textview_word_1">Слово (англ.)</string>
    <string name="textview_word_2">Перевод </string>
    <string name="textview_reg">Пароль не менее 6 символов</string>
    <string name="textview_status1">Статус: пройдено</string>
    <string name="textview_status0">Статус: не пройдено</string>
</resources>