<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".Activity_Tabbed">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Baza_act"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="-32dp">

        <ImageButton
            android:id="@+id/imageButton_back_profile"
            android:layout_width="76dp"
            android:layout_height="32dp"
            android:src="@drawable/buttonback1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.977" />

        <ProgressBar
            android:id="@+id/progressBar_profile"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.352" />

        <ImageView
            android:id="@+id/Button_profile_4"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:contentDescription="@string/Button_profile_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.802"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.655"
            app:srcCompat="@drawable/buttonred" />

        <ImageView
            android:id="@+id/Button_profile_2"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:contentDescription="@string/Button_profile_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.171"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.822"
            app:srcCompat="@drawable/buttonred" />

        <ImageView
            android:id="@+id/Button_profile_1"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:contentDescription="@string/Button_profile_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.171"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.655"
            app:srcCompat="@drawable/buttonred" />

        <ImageView
            android:id="@+id/Button_profile_5"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:contentDescription="@string/Button_profile_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.802"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.822"
            app:srcCompat="@drawable/buttonred" />

        <ImageView
            android:id="@+id/Button_profile_3"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:contentDescription="@string/Button_profile_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975"
            app:srcCompat="@drawable/buttonred" />

        <ImageView
            android:id="@+id/Button_profile_6"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:contentDescription="@string/Button_profile_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.802"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975"
            app:srcCompat="@drawable/buttonred" />

        <TextView
            android:id="@+id/textView_progressbar_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_progressbar_baza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold|italic"
            android:textSize="20dp"
            app:layout_constraintHorizontal_bias="0.961"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.349" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>