<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_1">

    <ImageView
        android:id="@+id/Profile_1_next"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:contentDescription="@string/Profile_1_next"
        android:onClick="onChange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@android:drawable/ic_media_next" />

    <ImageView
        android:id="@+id/Profile_1_previos"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:contentDescription="@string/Profile_1_previous"
        android:onClick="onChange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <fragment
        android:id="@+id/fragment_profile_1"
        android:name="com.example.iteng.Fragment_profile_1_1"
        android:layout_width="match_parent"
        android:layout_height="656dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout="@layout/fragment_profile_1_1" />

    <Button
        android:id="@+id/button_back_profile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_profile_1"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>